--- a/foodPra/Base.lproj/Main.storyboard
+++ b/foodPra/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Go0-02-7av">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="26L-Sg-ji5">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -323,6 +323,192 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="116.51785714285714"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="wfZ-o4-oh2">
+            <objects>
+                <viewController id="ijO-8K-PRb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OFa-pt-rSo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="fm6-Cy-yxp"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="hzZ-uW-m8I"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HEh-NB-ptB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-697" y="2350"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="llt-qm-afO">
+            <objects>
+                <viewController id="5Q0-Wm-acd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bXl-pw-AiP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="0bk-47-vNH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="z4z-tq-8DB"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xiB-kM-4qR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-686" y="3068"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="rg7-n7-Afd">
+            <objects>
+                <viewController id="qZp-Lp-0hp" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="maB-ws-wKA">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Wyo-ev-pDE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="gvj-UX-nlF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8dP-Xs-Flx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-686" y="3866"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="MUO-Ze-iBH">
+            <objects>
+                <viewController id="vBc-hF-HKJ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bQd-vq-nP3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="PPa-Ol-Bch"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="8dP-Qf-3xH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ulk-xy-Fmb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3143" y="946"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="7wO-q2-bjN">
+            <objects>
+                <viewController id="JYa-Gg-tbb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qeb-eS-NuC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Blq-zL-cf4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="nie-nH-FLk"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lw5-YE-b1J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3086" y="1712"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="gSX-S4-ISR">
+            <objects>
+                <viewController id="JoI-G8-qfj" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="301-PE-ghZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="G0Y-BD-Ysu"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="VvY-SI-H4I"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dpd-tp-k06" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2946" y="2435"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="sb0-3Z-shH">
+            <objects>
+                <viewController id="Tku-EV-u5h" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cmg-gP-LXY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="R9U-Pe-MG3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="a3e-Fn-sLM"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qgV-kL-Bfn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2888" y="3175"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="N5t-Ob-ibF">
+            <objects>
+                <viewController id="ZSc-t5-qF6" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="e5W-Xc-1sd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="T9G-U1-acK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Owo-gz-M9Y"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dQd-bo-Xoc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2854" y="3909"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="vIN-f6-yOB">
+            <objects>
+                <viewController id="6BL-Li-Sse" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bjG-GB-bA6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="wiV-L5-YWE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="jLI-hm-dzh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qpW-R9-n4Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-732" y="962"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="QVs-FO-ODJ">
+            <objects>
+                <viewController id="0fb-Y9-KnS" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zr9-hW-J3C">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ukR-5r-uDl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="QGY-U5-t1b"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="suX-Vj-z9Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-697" y="1744"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="H3D-q4-xfn">
+            <objects>
+                <tabBarController id="26L-Sg-ji5" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pSj-Tp-ZkR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="0fb-Y9-KnS" kind="relationship" relationship="viewControllers" id="x1g-Mx-5hL"/>
+                        <segue destination="ijO-8K-PRb" kind="relationship" relationship="viewControllers" id="SGT-wr-htE"/>
+                        <segue destination="5Q0-Wm-acd" kind="relationship" relationship="viewControllers" id="nBy-4q-Ors"/>
+                        <segue destination="qZp-Lp-0hp" kind="relationship" relationship="viewControllers" id="kb1-tk-SUF"/>
+                        <segue destination="6BL-Li-Sse" kind="relationship" relationship="viewControllers" id="YHE-Hv-lnA"/>
+                        <segue destination="vBc-hF-HKJ" kind="relationship" relationship="viewControllers" id="19O-Bt-E8p"/>
+                        <segue destination="JYa-Gg-tbb" kind="relationship" relationship="viewControllers" id="qmF-l3-ofu"/>
+                        <segue destination="JoI-G8-qfj" kind="relationship" relationship="viewControllers" id="PXC-BO-vvj"/>
+                        <segue destination="Tku-EV-u5h" kind="relationship" relationship="viewControllers" id="Lai-YP-8ZK"/>
+                        <segue destination="ZSc-t5-qF6" kind="relationship" relationship="viewControllers" id="J4g-a4-O3K"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k4Y-5c-FO7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1590" y="2050"/>
         </scene>
         <!--Daniel Baddal View Controller-->
         <scene sceneID="ScY-pL-EcH">
